# deskpro

./: .gitignore  Makefile  Taskfile.yml  docker-compose.yml  package.json
Frontend/frontendnext/: .dockerignore  .env.example  (+3 more)
deskpro-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
deskpro-backend/apps/tickets/: admin.py  api.py  auth.py  models.py  schemas.py
deskpro-backend/apps/tickets/migrations/: 0001_initial.py
deskpro-backend/config/: asgi.py  urls.py  wsgi.py
deskpro-backend/config/settings/: base.py  dev.py  prod.py
deskpro-backend/core/: db_router.py  encryption.py  middleware.py  neon_client.py  thread_local.py
deskpro-backend/management/authentication/centralusers/: admin.py  apps.py  models.py
deskpro-backend/management/authentication/centralusers/management/commands/: create_saas_admin.py
deskpro-backend/management/authentication/centralusers/migrations/: 0001_initial.py
deskpro-backend/management/authentication/tenantusers/: admin.py  api.py  apps.py  models.py  schemas.py  tokens.py
deskpro-backend/management/authentication/tenantusers/migrations/: 0001_initial.py  0002_alter_agent_managers.py  0003_rename_agent_to_tenantuser.py
deskpro-backend/management/tenants/: admin.py  api.py  apps.py  auth.py  models.py  provisioning.py  schemas.py
deskpro-backend/management/tenants/migrations/: 0001_initial.py  0002_tenant_admin_email.py  0003_tenantmember_and_encrypt_password.py
deskpro-backend/scripts/: create_tenant_schema.py  migrate_all_tenants.py
(+18 files in other folders)
