[project]
name = "deskpro-backend"
version = "0.1.0"
description = "Multi-tenant SaaS helpdesk backend"
requires-python = ">=3.12"

dependencies = [
    "Django>=5.0,<6.0",
    "django-ninja>=1.3.0",
    "psycopg[binary]>=3.1",
    "djangorestframework-simplejwt>=5.3",
    "python-decouple>=3.8",
    "httpx>=0.27",
    "django-cors-headers>=4.3",
    "cryptography>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
